--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Home</title>
 </head>
 <body>
-    <div id="container">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+    <div id="main">
+         <div id="container">
+          <button id="rock">Rock</button>
+          <button id="paper">Paper</button>
+           <button id="scissors">Scissors</button>
+         </div>
     </div>
+   
+    
 </body>
 </html>
